ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"a
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: media-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
    - hosts:
        - "md.yoons.io"
      secretName: md-tls
  rules:
    - host: "md.yoons.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hello
                port:
                  number: 8080
          - pathType: Prefix
            path: /transmission
            backend:
              service:
                name: /transmission
                port:
                  number: 9091
